<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView" >

    <LinearLayout
    android:id="@+id/edit_container"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edittext_reminder"
        android:hint="@string/edit_reminder_hint"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton_single_time"
            android:text="@string/edit_radio_single"
            android:textAppearance="?android:textAppearanceLarge"
            android:onClick="goSelectUse" />
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton_repeat"
            android:text="@string/edit_radio_repeat"
            android:textAppearance="?android:textAppearanceLarge"
            android:onClick="goSelectUse" />
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edittext_frequency"
        android:hint="@string/edit_frequency_hint"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:onClick="goSelectFrequency"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_select_days_label"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_marginBottom="5dp"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_marginBottom="30dp">

        <Button
            android:id="@+id/toggle_monday"
            android:text="@string/edit_monday"
            android:onClick="goToggleMonday"
            android:layout_weight="1"
            android:background="@drawable/border_style_button_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/toggle_tuesday"
            android:text="@string/edit_tuesday"
            android:onClick="goToggleTuesday"
            android:layout_weight="1"
            android:background="@drawable/border_style_button_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/toggle_wednesday"
            android:text="@string/edit_wednesday"
            android:onClick="goToggleWednesday"
            android:layout_weight="1"
            android:background="@drawable/border_style_button_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/toggle_thursday"
            android:text="@string/edit_thursday"
            android:onClick="goToggleThursday"
            android:layout_weight="1"
            android:background="@drawable/border_style_button_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/toggle_friday"
            android:text="@string/edit_friday"
            android:onClick="goToggleFriday"
            android:layout_weight="1"
            android:background="@drawable/border_style_button_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/toggle_saturday"
            android:text="@string/edit_saturday"
            android:onClick="goToggleSaturday"
            android:layout_weight="1"
            android:background="@drawable/border_style_button_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/toggle_sunday"
            android:text="@string/edit_sunday"
            android:onClick="goToggleSunday"
            android:layout_weight="1"
            android:background="@drawable/border_style_button_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rangebar_label"
        android:text="@string/edit_rangebar_label"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_marginBottom="5dp"
        />

    </LinearLayout>

</ScrollView>